// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control should render Control 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  position: relative;
}

.emotion-1 {
  width: 2rem;
  height: 2rem;
  background-color: white;
  color: black;
  border: none;
  border-radius: 2px;
  box-shadow: rgb(0 0 0 / 16%) 0 0 4px;
  cursor: pointer;
  display: none;
}

.emotion-1:hover {
  background-color: white;
  color: black;
}

.emotion-1:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-2 {
  background-color: white;
  font-size: 0.813rem;
}

.emotion-3 {
  font-weight: 600;
  padding: 0.3125rem 0.5rem 0.3125rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: none;
  background: none;
  cursor: pointer;
  color: black;
}

.emotion-4:hover {
  background-color: white;
  color: black;
}

.emotion-4:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-5 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 0;
}

.emotion-6 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  margin-top: 0.5rem;
  height: 1.5rem;
  font-size: 0.813rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

.emotion-8 {
  padding: 0.7rem 0.875rem;
}

.emotion-9 {
  margin-bottom: 0.2rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 10rem;
  height: 1.5rem;
}

.emotion-12 {
  width: 3rem;
  margin-left: 0.25rem;
  text-align: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <button
          aria-label="hide.control"
          class="ms-Button ms-Button--icon emotion-1 root-110"
          data-is-focusable="true"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-label="hide.control"
              class="root-120"
              data-icon-name="Search"
              role="img"
            >
              
            </i>
          </span>
        </button>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <span>
              position.building.footprint
            </span>
            <button
              aria-label="toggle.control"
              class="ms-Button ms-Button--icon emotion-4 root-110"
              data-is-focusable="true"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-111"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="root-123"
                  data-icon-name="BackToWindow"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="ms-ChoiceFieldGroup root-124"
            >
              <div
                role="radiogroup"
              >
                <div
                  class="ms-ChoiceFieldGroup-flexContainer"
                >
                  <div
                    class="ms-ChoiceField root-125"
                  >
                    <div
                      class="ms-ChoiceField-wrapper"
                    >
                      <input
                        checked=""
                        class="ms-ChoiceField-input input-126"
                        id="ChoiceGroup50-address"
                        name="ChoiceGroup50"
                        type="radio"
                      />
                      <label
                        class="ms-ChoiceField-field is-checked field-127"
                        for="ChoiceGroup50-address"
                      >
                        <span
                          class="ms-ChoiceFieldLabel"
                          id="ChoiceGroupLabel51-address"
                        >
                          search.by.building.address
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="ms-ChoiceField root-125"
                  >
                    <div
                      class="ms-ChoiceField-wrapper"
                    >
                      <input
                        class="ms-ChoiceField-input input-126"
                        id="ChoiceGroup50-coordinates"
                        name="ChoiceGroup50"
                        type="radio"
                      />
                      <label
                        class="ms-ChoiceField-field field-132"
                        for="ChoiceGroup50-coordinates"
                      >
                        <span
                          class="ms-ChoiceFieldLabel"
                          id="ChoiceGroupLabel51-coordinates"
                        >
                          search.by.lon.lat
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="ms-TextField root-136"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-137"
                >
                  <input
                    aria-invalid="false"
                    class="ms-TextField-field field-138"
                    id="TextField52"
                    placeholder="search.address"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              aria-disabled="true"
              class="ms-Button ms-Button--primary is-disabled emotion-7 root-147"
              data-is-focusable="false"
              disabled=""
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-111"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Button-textContainer textContainer-112"
                >
                  <span
                    class="ms-Button-label label-149"
                    id="id__57"
                  >
                    search
                  </span>
                </span>
              </span>
            </button>
          </div>
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              rotation.in.degrees
            </div>
            <div
              class="emotion-10"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="ms-Slider ms-Slider-enabled ms-Slider-row root-151"
                >
                  <label
                    class="ms-Label titleLabel-162"
                    for="Slider60"
                  />
                  <div
                    class="ms-Slider-container container-153"
                  >
                    <div
                      aria-disabled="false"
                      aria-valuemax="360"
                      aria-valuemin="-360"
                      aria-valuenow="111"
                      aria-valuetext="111"
                      class="ms-Slider-slideBox slideBox-154"
                      data-is-focusable="true"
                      id="Slider60"
                      role="slider"
                      tabindex="0"
                    >
                      <div
                        class="ms-Slider-line line-156"
                      >
                        <span
                          class="ms-Slider-thumb thumb-155"
                          style="left: 65.41666666666667%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                          style="width: 0%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-active activeSection-158"
                          style="width: 65.41666666666667%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                          style="width: 34.58333333333333%;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ms-TextField emotion-12 root-136"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-163"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="rotation.in.degrees"
                      autocomplete="off"
                      class="ms-TextField-field field-164"
                      id="TextField61"
                      type="text"
                      value="111"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  position: relative;
}

.emotion-1 {
  width: 2rem;
  height: 2rem;
  background-color: white;
  color: black;
  border: none;
  border-radius: 2px;
  box-shadow: rgb(0 0 0 / 16%) 0 0 4px;
  cursor: pointer;
  display: none;
}

.emotion-1:hover {
  background-color: white;
  color: black;
}

.emotion-1:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-2 {
  background-color: white;
  font-size: 0.813rem;
}

.emotion-3 {
  font-weight: 600;
  padding: 0.3125rem 0.5rem 0.3125rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: none;
  background: none;
  cursor: pointer;
  color: black;
}

.emotion-4:hover {
  background-color: white;
  color: black;
}

.emotion-4:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-5 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 0;
}

.emotion-6 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  margin-top: 0.5rem;
  height: 1.5rem;
  font-size: 0.813rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

.emotion-8 {
  padding: 0.7rem 0.875rem;
}

.emotion-9 {
  margin-bottom: 0.2rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 10rem;
  height: 1.5rem;
}

.emotion-12 {
  width: 3rem;
  margin-left: 0.25rem;
  text-align: center;
}

<div>
    <div
      class="emotion-0"
    >
      <button
        aria-label="hide.control"
        class="ms-Button ms-Button--icon emotion-1 root-110"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-111"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-label="hide.control"
            class="root-120"
            data-icon-name="Search"
            role="img"
          >
            
          </i>
        </span>
      </button>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span>
            position.building.footprint
          </span>
          <button
            aria-label="toggle.control"
            class="ms-Button ms-Button--icon emotion-4 root-110"
            data-is-focusable="true"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="root-123"
                data-icon-name="BackToWindow"
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="ms-ChoiceFieldGroup root-124"
          >
            <div
              role="radiogroup"
            >
              <div
                class="ms-ChoiceFieldGroup-flexContainer"
              >
                <div
                  class="ms-ChoiceField root-125"
                >
                  <div
                    class="ms-ChoiceField-wrapper"
                  >
                    <input
                      checked=""
                      class="ms-ChoiceField-input input-126"
                      id="ChoiceGroup50-address"
                      name="ChoiceGroup50"
                      type="radio"
                    />
                    <label
                      class="ms-ChoiceField-field is-checked field-127"
                      for="ChoiceGroup50-address"
                    >
                      <span
                        class="ms-ChoiceFieldLabel"
                        id="ChoiceGroupLabel51-address"
                      >
                        search.by.building.address
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="ms-ChoiceField root-125"
                >
                  <div
                    class="ms-ChoiceField-wrapper"
                  >
                    <input
                      class="ms-ChoiceField-input input-126"
                      id="ChoiceGroup50-coordinates"
                      name="ChoiceGroup50"
                      type="radio"
                    />
                    <label
                      class="ms-ChoiceField-field field-132"
                      for="ChoiceGroup50-coordinates"
                    >
                      <span
                        class="ms-ChoiceFieldLabel"
                        id="ChoiceGroupLabel51-coordinates"
                      >
                        search.by.lon.lat
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="ms-TextField root-136"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-137"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-138"
                  id="TextField52"
                  placeholder="search.address"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled="true"
            class="ms-Button ms-Button--primary is-disabled emotion-7 root-147"
            data-is-focusable="false"
            disabled=""
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Button-textContainer textContainer-112"
              >
                <span
                  class="ms-Button-label label-149"
                  id="id__57"
                >
                  search
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            rotation.in.degrees
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              <div
                class="ms-Slider ms-Slider-enabled ms-Slider-row root-151"
              >
                <label
                  class="ms-Label titleLabel-162"
                  for="Slider60"
                />
                <div
                  class="ms-Slider-container container-153"
                >
                  <div
                    aria-disabled="false"
                    aria-valuemax="360"
                    aria-valuemin="-360"
                    aria-valuenow="111"
                    aria-valuetext="111"
                    class="ms-Slider-slideBox slideBox-154"
                    data-is-focusable="true"
                    id="Slider60"
                    role="slider"
                    tabindex="0"
                  >
                    <div
                      class="ms-Slider-line line-156"
                    >
                      <span
                        class="ms-Slider-thumb thumb-155"
                        style="left: 65.41666666666667%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                        style="width: 0%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-active activeSection-158"
                        style="width: 65.41666666666667%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                        style="width: 34.58333333333333%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ms-TextField emotion-12 root-136"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-163"
                >
                  <input
                    aria-invalid="false"
                    aria-label="rotation.in.degrees"
                    autocomplete="off"
                    class="ms-TextField-field field-164"
                    id="TextField61"
                    type="text"
                    value="111"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Control should show error message 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  position: relative;
}

.emotion-1 {
  width: 2rem;
  height: 2rem;
  background-color: white;
  color: black;
  border: none;
  border-radius: 2px;
  box-shadow: rgb(0 0 0 / 16%) 0 0 4px;
  cursor: pointer;
  display: none;
}

.emotion-1:hover {
  background-color: white;
  color: black;
}

.emotion-1:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-2 {
  background-color: white;
  font-size: 0.813rem;
}

.emotion-3 {
  font-weight: 600;
  padding: 0.3125rem 0.5rem 0.3125rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: none;
  background: none;
  cursor: pointer;
  color: black;
}

.emotion-4:hover {
  background-color: white;
  color: black;
}

.emotion-4:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-5 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 0;
}

.emotion-6 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  margin-top: 0.5rem;
  height: 1.5rem;
  font-size: 0.813rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

.emotion-8 {
  padding: 0.7rem 0.875rem;
}

.emotion-9 {
  margin-bottom: 0.2rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 10rem;
  height: 1.5rem;
}

.emotion-12 {
  width: 3rem;
  margin-left: 0.25rem;
  text-align: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <button
          aria-label="hide.control"
          class="ms-Button ms-Button--icon emotion-1 root-110"
          data-is-focusable="true"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-label="hide.control"
              class="root-120"
              data-icon-name="Search"
              role="img"
            >
              
            </i>
          </span>
        </button>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <span>
              position.building.footprint
            </span>
            <button
              aria-label="toggle.control"
              class="ms-Button ms-Button--icon emotion-4 root-110"
              data-is-focusable="true"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-111"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="root-123"
                  data-icon-name="BackToWindow"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="emotion-5"
          >
            <div
              class="ms-ChoiceFieldGroup root-124"
            >
              <div
                role="radiogroup"
              >
                <div
                  class="ms-ChoiceFieldGroup-flexContainer"
                >
                  <div
                    class="ms-ChoiceField root-125"
                  >
                    <div
                      class="ms-ChoiceField-wrapper"
                    >
                      <input
                        checked=""
                        class="ms-ChoiceField-input input-126"
                        id="ChoiceGroup129-address"
                        name="ChoiceGroup129"
                        type="radio"
                      />
                      <label
                        class="ms-ChoiceField-field is-checked field-127"
                        for="ChoiceGroup129-address"
                      >
                        <span
                          class="ms-ChoiceFieldLabel"
                          id="ChoiceGroupLabel130-address"
                        >
                          search.by.building.address
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="ms-ChoiceField root-125"
                  >
                    <div
                      class="ms-ChoiceField-wrapper"
                    >
                      <input
                        class="ms-ChoiceField-input input-126"
                        id="ChoiceGroup129-coordinates"
                        name="ChoiceGroup129"
                        type="radio"
                      />
                      <label
                        class="ms-ChoiceField-field field-132"
                        for="ChoiceGroup129-coordinates"
                      >
                        <span
                          class="ms-ChoiceFieldLabel"
                          id="ChoiceGroupLabel130-coordinates"
                        >
                          search.by.lon.lat
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="ms-TextField is-disabled root-136"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-168"
                >
                  <input
                    aria-invalid="false"
                    class="ms-TextField-field field-169"
                    disabled=""
                    id="TextField131"
                    placeholder="search.address"
                    type="text"
                    value="742 Evergreen Terrace"
                  />
                </div>
              </div>
            </div>
            <button
              class="ms-Button ms-Button--primary emotion-7 root-166"
              data-is-focusable="true"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-111"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Button-textContainer textContainer-112"
                >
                  <span
                    class="ms-Button-label label-167"
                    id="id__136"
                  >
                    search
                  </span>
                </span>
              </span>
            </button>
          </div>
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              rotation.in.degrees
            </div>
            <div
              class="emotion-10"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="ms-Slider ms-Slider-enabled ms-Slider-row root-151"
                >
                  <label
                    class="ms-Label titleLabel-162"
                    for="Slider139"
                  />
                  <div
                    class="ms-Slider-container container-153"
                  >
                    <div
                      aria-disabled="false"
                      aria-valuemax="360"
                      aria-valuemin="-360"
                      aria-valuenow="111"
                      aria-valuetext="111"
                      class="ms-Slider-slideBox slideBox-154"
                      data-is-focusable="true"
                      id="Slider139"
                      role="slider"
                      tabindex="0"
                    >
                      <div
                        class="ms-Slider-line line-156"
                      >
                        <span
                          class="ms-Slider-thumb thumb-155"
                          style="left: 65.41666666666667%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                          style="width: 0%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-active activeSection-158"
                          style="width: 65.41666666666667%;"
                        />
                        <span
                          class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                          style="width: 34.58333333333333%;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ms-TextField emotion-12 root-136"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-163"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="rotation.in.degrees"
                      autocomplete="off"
                      class="ms-TextField-field field-164"
                      id="TextField140"
                      type="text"
                      value="111"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  position: relative;
}

.emotion-1 {
  width: 2rem;
  height: 2rem;
  background-color: white;
  color: black;
  border: none;
  border-radius: 2px;
  box-shadow: rgb(0 0 0 / 16%) 0 0 4px;
  cursor: pointer;
  display: none;
}

.emotion-1:hover {
  background-color: white;
  color: black;
}

.emotion-1:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-2 {
  background-color: white;
  font-size: 0.813rem;
}

.emotion-3 {
  font-weight: 600;
  padding: 0.3125rem 0.5rem 0.3125rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: none;
  background: none;
  cursor: pointer;
  color: black;
}

.emotion-4:hover {
  background-color: white;
  color: black;
}

.emotion-4:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-5 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 0;
}

.emotion-6 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  margin-top: 0.5rem;
  height: 1.5rem;
  font-size: 0.813rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

.emotion-8 {
  padding: 0.7rem 0.875rem;
}

.emotion-9 {
  margin-bottom: 0.2rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 10rem;
  height: 1.5rem;
}

.emotion-12 {
  width: 3rem;
  margin-left: 0.25rem;
  text-align: center;
}

<div>
    <div
      class="emotion-0"
    >
      <button
        aria-label="hide.control"
        class="ms-Button ms-Button--icon emotion-1 root-110"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-111"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-label="hide.control"
            class="root-120"
            data-icon-name="Search"
            role="img"
          >
            
          </i>
        </span>
      </button>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span>
            position.building.footprint
          </span>
          <button
            aria-label="toggle.control"
            class="ms-Button ms-Button--icon emotion-4 root-110"
            data-is-focusable="true"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="root-123"
                data-icon-name="BackToWindow"
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="ms-ChoiceFieldGroup root-124"
          >
            <div
              role="radiogroup"
            >
              <div
                class="ms-ChoiceFieldGroup-flexContainer"
              >
                <div
                  class="ms-ChoiceField root-125"
                >
                  <div
                    class="ms-ChoiceField-wrapper"
                  >
                    <input
                      checked=""
                      class="ms-ChoiceField-input input-126"
                      id="ChoiceGroup129-address"
                      name="ChoiceGroup129"
                      type="radio"
                    />
                    <label
                      class="ms-ChoiceField-field is-checked field-127"
                      for="ChoiceGroup129-address"
                    >
                      <span
                        class="ms-ChoiceFieldLabel"
                        id="ChoiceGroupLabel130-address"
                      >
                        search.by.building.address
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="ms-ChoiceField root-125"
                >
                  <div
                    class="ms-ChoiceField-wrapper"
                  >
                    <input
                      class="ms-ChoiceField-input input-126"
                      id="ChoiceGroup129-coordinates"
                      name="ChoiceGroup129"
                      type="radio"
                    />
                    <label
                      class="ms-ChoiceField-field field-132"
                      for="ChoiceGroup129-coordinates"
                    >
                      <span
                        class="ms-ChoiceFieldLabel"
                        id="ChoiceGroupLabel130-coordinates"
                      >
                        search.by.lon.lat
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="ms-TextField is-disabled root-136"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-168"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-169"
                  disabled=""
                  id="TextField131"
                  placeholder="search.address"
                  type="text"
                  value="742 Evergreen Terrace"
                />
              </div>
            </div>
          </div>
          <button
            class="ms-Button ms-Button--primary emotion-7 root-166"
            data-is-focusable="true"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Button-textContainer textContainer-112"
              >
                <span
                  class="ms-Button-label label-167"
                  id="id__136"
                >
                  search
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            rotation.in.degrees
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              <div
                class="ms-Slider ms-Slider-enabled ms-Slider-row root-151"
              >
                <label
                  class="ms-Label titleLabel-162"
                  for="Slider139"
                />
                <div
                  class="ms-Slider-container container-153"
                >
                  <div
                    aria-disabled="false"
                    aria-valuemax="360"
                    aria-valuemin="-360"
                    aria-valuenow="111"
                    aria-valuetext="111"
                    class="ms-Slider-slideBox slideBox-154"
                    data-is-focusable="true"
                    id="Slider139"
                    role="slider"
                    tabindex="0"
                  >
                    <div
                      class="ms-Slider-line line-156"
                    >
                      <span
                        class="ms-Slider-thumb thumb-155"
                        style="left: 65.41666666666667%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                        style="width: 0%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-active activeSection-158"
                        style="width: 65.41666666666667%;"
                      />
                      <span
                        class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                        style="width: 34.58333333333333%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ms-TextField emotion-12 root-136"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-163"
                >
                  <input
                    aria-invalid="false"
                    aria-label="rotation.in.degrees"
                    autocomplete="off"
                    class="ms-TextField-field field-164"
                    id="TextField140"
                    type="text"
                    value="111"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GeoreferenceControl class onAdd should return container 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  width: 2rem;
  height: 2rem;
  background-color: white;
  color: black;
  border: none;
  border-radius: 2px;
  box-shadow: rgb(0 0 0 / 16%) 0 0 4px;
  cursor: pointer;
  display: none;
}

.emotion-1:hover {
  background-color: white;
  color: black;
}

.emotion-1:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-2 {
  background-color: white;
  font-size: 0.813rem;
}

.emotion-3 {
  font-weight: 600;
  padding: 0.3125rem 0.5rem 0.3125rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: none;
  background: none;
  cursor: pointer;
  color: black;
}

.emotion-4:hover {
  background-color: white;
  color: black;
}

.emotion-4:active {
  background-color: #f1f1f1;
  color: black;
}

.emotion-5 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 0;
}

.emotion-6 {
  padding: 0.7rem 0.875rem;
  border-bottom: 1px solid #F3F2F1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  margin-top: 0.5rem;
  height: 1.5rem;
  font-size: 0.813rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

.emotion-8 {
  padding: 0.7rem 0.875rem;
}

.emotion-9 {
  margin-bottom: 0.2rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 10rem;
  height: 1.5rem;
}

.emotion-12 {
  width: 3rem;
  margin-left: 0.25rem;
  text-align: center;
}

<div
  class="azure-maps-control-container"
>
  <div
    class="emotion-0"
  >
    <button
      aria-label="hide.control"
      class="ms-Button ms-Button--icon emotion-1 root-110"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-111"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-label="hide.control"
          class="root-120"
          data-icon-name="Search"
          role="img"
        >
          
        </i>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <span>
          position.building.footprint
        </span>
        <button
          aria-label="toggle.control"
          class="ms-Button ms-Button--icon emotion-4 root-110"
          data-is-focusable="true"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden="true"
              class="root-123"
              data-icon-name="BackToWindow"
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="ms-ChoiceFieldGroup root-124"
        >
          <div
            role="radiogroup"
          >
            <div
              class="ms-ChoiceFieldGroup-flexContainer"
            >
              <div
                class="ms-ChoiceField root-125"
              >
                <div
                  class="ms-ChoiceField-wrapper"
                >
                  <input
                    checked=""
                    class="ms-ChoiceField-input input-126"
                    id="ChoiceGroup6-address"
                    name="ChoiceGroup6"
                    type="radio"
                  />
                  <label
                    class="ms-ChoiceField-field is-checked field-127"
                    for="ChoiceGroup6-address"
                  >
                    <span
                      class="ms-ChoiceFieldLabel"
                      id="ChoiceGroupLabel7-address"
                    >
                      search.by.building.address
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="ms-ChoiceField root-125"
              >
                <div
                  class="ms-ChoiceField-wrapper"
                >
                  <input
                    class="ms-ChoiceField-input input-126"
                    id="ChoiceGroup6-coordinates"
                    name="ChoiceGroup6"
                    type="radio"
                  />
                  <label
                    class="ms-ChoiceField-field field-132"
                    for="ChoiceGroup6-coordinates"
                  >
                    <span
                      class="ms-ChoiceFieldLabel"
                      id="ChoiceGroupLabel7-coordinates"
                    >
                      search.by.lon.lat
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField root-136"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-137"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-138"
                id="TextField8"
                placeholder="search.address"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          aria-disabled="true"
          class="ms-Button ms-Button--primary is-disabled emotion-7 root-147"
          data-is-focusable="false"
          disabled=""
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <span
              class="ms-Button-textContainer textContainer-112"
            >
              <span
                class="ms-Button-label label-149"
                id="id__13"
              >
                search
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          rotation.in.degrees
        </div>
        <div
          class="emotion-10"
        >
          <div
            class="emotion-11"
          >
            <div
              class="ms-Slider ms-Slider-enabled ms-Slider-row root-151"
            >
              <label
                class="ms-Label titleLabel-162"
                for="Slider16"
              />
              <div
                class="ms-Slider-container container-153"
              >
                <div
                  aria-disabled="false"
                  aria-valuemax="360"
                  aria-valuemin="-360"
                  aria-valuenow="111"
                  aria-valuetext="111"
                  class="ms-Slider-slideBox slideBox-154"
                  data-is-focusable="true"
                  id="Slider16"
                  role="slider"
                  tabindex="0"
                >
                  <div
                    class="ms-Slider-line line-156"
                  >
                    <span
                      class="ms-Slider-thumb thumb-155"
                      style="left: 65.41666666666667%;"
                    />
                    <span
                      class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                      style="width: 0%;"
                    />
                    <span
                      class="lineContainer-157 ms-Slider-active activeSection-158"
                      style="width: 65.41666666666667%;"
                    />
                    <span
                      class="lineContainer-157 ms-Slider-inactive inactiveSection-159"
                      style="width: 34.58333333333333%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ms-TextField emotion-12 root-136"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-163"
              >
                <input
                  aria-invalid="false"
                  aria-label="rotation.in.degrees"
                  autocomplete="off"
                  class="ms-TextField-field field-164"
                  id="TextField17"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
